# c_plusx2_project

./: CLAUDE.md  CMakeLists.txt  README.md  bench_tensor.cpp  ci.yml  learning-journey.html  learning_journal.html  micrograd.hpp  ops.hpp  settings.json  shape.hpp  tensor.hpp  test_ops.cpp  test_tensor.cpp
benchmarks/: bench_expr.cpp  bench_simd.cpp  bench_tensor.cpp
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build2/Testing/Temporary/: CTestCostData.txt
docs/: PHASE4_LEARNINGS.md
examples/: xor_mlp.cpp
include/micrograd/: micrograd.hpp  ops.hpp  shape.hpp  tensor.hpp
src/: shape.hpp
src/simd/: aligned_tensor.hpp  matmul_fast.hpp  simd.hpp  simd_detect.hpp  simd_ops.hpp
tests/: test_autograd.cpp  test_expr.cpp  test_main.cpp  test_ops.cpp  test_shape.cpp  test_simd.cpp  test_tensor.cpp
